--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,8 @@
-ultralytics==8.0.84
-opencv-python-headless==4.10.0.84  # Matches roboflow requirements
-matplotlib==3.7.1
-roboflow==1.1.50
-kafka-python==2.0.2
-flask==2.3.3
-flask-socketio==5.3.3
-requests==2.31.0
-numpy==1.25.0
-# Uncomment if needed:
-# eventlet==0.33.3
-# pyflink==1.17.1
+Flask==2.3.2
+Flask-SocketIO==5.3.6
+opencv-python==4.8.1.78
+ultralytics==8.0.196
+numpy==1.24.4
+eventlet==0.33.3
+
+
