--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,9 @@ kafka_2.12-3.9.0/
 /withJSON/kafka_2.13-2.8.0
 *.jar
 *.tgz
+
+*.tgz
+*.jar
+withJSON/flink-yolov8-demo/target/
+withJSON/flink-kafka-demo/target/
+withJSON/kafka_2.13-2.8.0/
