--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,183 +1,3 @@
-# version: '3.8'
-
-# services:
-#   zookeeper:
-#     image: confluentinc/cp-zookeeper:7.0.0
-#     container_name: zookeeper
-#     ports:
-#       - "2181:2181"
-#     environment:
-#       ZOOKEEPER_CLIENT_PORT: 2181
-#     networks:
-#       - mynetwork
-
-#   kafka:
-#     image: confluentinc/cp-kafka:7.0.0
-#     container_name: kafka
-#     ports:
-#       - "9092:9092"
-#     environment:
-#       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-#       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
-#       KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
-#       KAFKA_LISTENER_SECURITY_PROTOCOL: PLAINTEXT
-#       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-#     depends_on:
-#       - zookeeper
-#     networks:
-#       - mynetwork
-
-#   flink-jobmanager:
-#     image: apache/flink:1.13.6-scala_2.12-java11
-#     container_name: flink-jobmanager
-#     ports:
-#       - "8081:8081"
-#     command: jobmanager
-#     environment:
-#       - JOB_MANAGER_RPC_ADDRESS=flink-jobmanager
-#     depends_on:
-#       - kafka
-#     networks:
-#       - mynetwork
-
-#   flink-taskmanager:
-#     image: apache/flink:1.13.6-scala_2.12-java11
-#     container_name: flink-taskmanager
-#     depends_on:
-#       - flink-jobmanager
-#     command: taskmanager
-#     environment:
-#       - JOB_MANAGER_RPC_ADDRESS=flink-jobmanager
-#     networks:
-#       - mynetwork
-
-# networks:
-#   mynetwork:
-#     driver: bridge
-
-
-
-
-# version: '3.8'
-
-# services:
-#   zookeeper:
-#     image: confluentinc/cp-zookeeper:7.1.0  # Updated version
-#     container_name: zookeeper
-#     ports:
-#       - "2181:2181"
-#     environment:
-#       ZOOKEEPER_CLIENT_PORT: 2181
-#     networks:
-#       - mynetwork
-
-#   kafka:
-#     image: confluentinc/cp-kafka:7.1.0  # Updated version
-#     container_name: kafka
-#     ports:
-#       - "9092:9092"
-#     environment:
-#       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-#       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
-#       KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
-#       KAFKA_LISTENER_SECURITY_PROTOCOL: PLAINTEXT
-#       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-#     depends_on:
-#       - zookeeper
-#     networks:
-#       - mynetwork
-
-#   flink-jobmanager:
-#     image: apache/flink:1.17.0-scala_2.12-java11  # Updated version
-#     container_name: flink-jobmanager
-#     ports:
-#       - "8081:8081"
-#     command: jobmanager
-#     environment:
-#       - JOB_MANAGER_RPC_ADDRESS=flink-jobmanager
-#     depends_on:
-#       - kafka
-#     networks:
-#       - mynetwork
-
-#   flink-taskmanager:
-#     image: apache/flink:1.17.0-scala_2.12-java11  # Updated version
-#     container_name: flink-taskmanager
-#     depends_on:
-#       - flink-jobmanager
-#     command: taskmanager
-#     environment:
-#       - JOB_MANAGER_RPC_ADDRESS=flink-jobmanager
-#     networks:
-#       - mynetwork
-
-# networks:
-#   mynetwork:
-#     driver: bridge
-
-
-
-
-# version: '3'
-# services:
-#   zookeeper:
-#     image: bitnami/zookeeper:3.7
-#     container_name: zookeeper
-#     ports:
-#       - "2181:2181"
-#     environment:
-#       - ALLOW_ANONYMOUS_LOGIN=yes
-#       - ZOO_PORT_NUMBER=2181
-#     networks:
-#       - mynetwork
-
-#   kafka:
-#     image: bitnami/kafka:2.8.0
-#     container_name: kafka
-#     ports:
-#       - "9092:9092"
-#     environment:
-#       - KAFKA_BROKER_ID=1
-#       - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
-#       - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
-#       - KAFKA_LISTENERS=PLAINTEXT://0.0.0.0:9092
-#       - ALLOW_PLAINTEXT_LISTENER=yes
-#       - KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1
-#     depends_on:
-#       - zookeeper
-#     networks:
-#       - mynetwork
-
-#   flink-jobmanager:
-#     image: apache/flink:1.13.6-scala_2.12-java11
-#     container_name: flink-jobmanager
-#     ports:
-#       - "8081:8081"
-#     command: jobmanager
-#     environment:
-#       - JOB_MANAGER_RPC_ADDRESS=flink-jobmanager
-#     depends_on:
-#       - kafka
-#     networks:
-#       - mynetwork
-
-#   flink-taskmanager:
-#     image: apache/flink:1.13.6-scala_2.12-java11
-#     container_name: flink-taskmanager
-#     depends_on:
-#       - flink-jobmanager
-#     command: taskmanager
-#     environment:
-#       - JOB_MANAGER_RPC_ADDRESS=flink-jobmanager
-#     networks:
-#       - mynetwork
-
-# networks:
-#   mynetwork:
-#     driver: bridge
-
-
-
 version: '3'
 services:
   zookeeper:
@@ -244,7 +64,7 @@ services:
     depends_on:
       - kafka
     volumes:
-      - ./flink-yolov8-demo/target:/opt/flink/usrlib  # Mount the directory containing the JAR
+      - ./flink-yolov8-demo/target:/opt/flink/usrlib  
     networks:
       - mynetwork
 
@@ -268,7 +88,7 @@ services:
       - flink-jobmanager
       - kafka-topic-creator
     volumes:
-      - ./flink-yolov8-demo/target:/opt/flink/usrlib  # Mount the JAR file
+      - ./flink-yolov8-demo/target:/opt/flink/usrlib  
     networks:
       - mynetwork
 
