--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-#utilities
+# requirements.txt
+
 numpy==1.24.4
-opencv-python-headless==4.11.0.86
+opencv-python-headless==4.11.0.86  
 onnxruntime==1.14.1
 kafka-python==2.0.2
 pytesseract==0.3.10
-prometheus-client
-
-
+prometheus-client==0.20.0 
+pandas==2.0.3  
+easyocr==1.7.1 
+imutils==0.5.4  
 
